MVC/fixing typings + readability 🧹

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,3 +1,7 @@
+// Copyright Tippers 🎲🃏 2022
+// 17 U.S.C §§ 101-1511
+
+// importing relevant fonts
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap');
 /* @import 'http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css'; */
@@ -40,7 +44,7 @@
 	user-select: none;
 }
 
-/* Triangle de sélection = 1 rose +  1 blanc */
+// wheel container 
 .wheel-container::before,
 .wheel-container::after {
 	content: '';
@@ -65,7 +69,6 @@
 	border-right-color: var(--neutral-color);
 }
 
-/* Roue */
 .wheel {
 	display: block;
 	position: relative;
@@ -110,7 +113,7 @@
 	position: absolute;
 	box-sizing: border-box;
 
-	/* position de l'item */
+	//   position 
 	top: 50%;
 	left: 50%;
 	width: 50%;
@@ -124,7 +127,7 @@
 	font-family: var(--wheel-font);
 }
 
-/* Background de l'élément = triangle rose plus clair */
+/* Background item before */
 .wheel-item:before {
 	content: ' ';
 	display: block;
@@ -139,18 +142,10 @@
 	padding-left: 0px;
 	/* opacity: 0.25; */
 
-	/* 
-    Largeur du triangle
-    Je ne sais pas pourquoi j'ai besoin d'ajouter 
-      " + var(--wheel-size) / 2 " dans slice-max-width  ==> donne 2.PI.R + R
-    mais globalement ca marche a peu près bien 
-    TODO: A étudier 
-  */
 	--slice-max-width: calc(var(--PI) * var(--wheel-size) + var(--wheel-size) / 2);
 	--slice-width: calc((var(--slice-max-width) / var(--nb-item)) - var(--wheel-slice-spacing));
 	border: solid transparent calc(var(--slice-width) / 1.57);
 	border-left: solid transparent 0;
-	/* profondeur du triangle = du centre de la roue à la bordure = 300px / 2 */
 	border-right: solid orange calc(var(--wheel-size) / 2);
 }
 
@@ -160,7 +155,6 @@
 		--slice-width: calc((var(--slice-max-width) / var(--nb-item)) - var(--wheel-slice-spacing));
 		border: solid transparent calc(var(--slice-width) / 1.27);
 		border-left: solid transparent 0;
-		/* profondeur du triangle = du centre de la roue à la bordure = 300px / 2 */
 		border-right: solid orange calc(200px / 2);
 	}
 }
